# fastly-compute-rust-rbac

./: .gitignore  Cargo.toml  README.md  fastly.toml
res/: index.html  logged-out.html  public.html
src/: awsv4.rs  config.rs  config.toml  cookies.rs  idp.rs  main.rs  responses.rs
